<resources>
    <string name="app_name">SchoolApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="test">Test context!</string>
    <string name="arrow"> -->> </string>

    <string name="detail_text_1">주소지 : </string>
    <string name="detail_text_2">설립 형태 : </string>
    <string name="detail_text_3">학교명 : </string>
    <string name="detail_text_4">장애 영역 : </string>
    <string name="detail_text_5">개교년월일 : </string>
    <string name="detail_text_6">우편번호 : </string>
    <string name="detail_text_7">상세 주소 : </string>
    <string name="detail_text_8">행정실 전화번호 : </string>
    <string name="detail_text_9">교무실 전화번호 : </string>
    <string name="detail_text_10">홈페이지 : </string>
    <string name="dialog_sign_in_message">학교를 즐겨찾기 하려면 로그인하세요. 관련 데이터가 앱에서 계정과 동기화됩니다.</string>
    <string name="dialog_sign_in_top_message">반갑습니다!</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_out_button">Sign out</string>
    <string name="dialog_sign_out_message">학교 데이터가 계정에 동기화된 상태로 유지됩니다.</string>
    <string name="bookmark_empty_text">즐겨찾기한 학교가 없습니다.</string>
    <string name="app_title">특수학교 찾기</string>
    <string name="info_1">서비스 이용 약관</string>
    <string name="info_2">위치 기반 서비스 이용 약관</string>
    <string name="info_3">정보 제공처</string>
    <string name="info_4">버전 정보</string>
    <string name="info_5">개발자 정보</string>
    <string name="school_detail_button_map">지도로 보기</string>
    <string name="school_detail_button_call">전화 걸기</string>
    <string name="school_detail_button_website">홈페이지 보기</string>
    <string name="item_home_button_map">지도에서 보기</string>
    <string name="item_home_button_detail">자세히 보기</string>
    <string name="item_home_header_title">즐겨찾기한 학교</string>
</resources>
