<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.specialschool.schoolapp.ui.detail.SchoolDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5FFE5"
        tools:context=".ui.detail.SchoolDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_1"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.province}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_2"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.type.displayName}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_3"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.displayName}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_4"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.category.displayName}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_5"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.openDate.toString()}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_6"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{Integer.toString(viewModel.school.zipCode)}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_7"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info7"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="4"
                            android:gravity="center_vertical"
                            android:text="@{viewModel.school.address}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/map_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="50dp"
                        android:text="지도로 보기"
                        android:onClick="@{() -> viewModel.openSchoolMap()}"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_8"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.contact.adminNumber}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/call_btn1"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="50dp"
                        android:text="전화 걸기"
                        android:onClick="@{() -> viewModel.openPhoneCall(viewModel.school.contact.adminNumber)}"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_9"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.contact.staffRoomNumber}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/call_btn2"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="50dp"
                        android:text="전화 걸기"
                        android:onClick="@{() -> viewModel.openPhoneCall(viewModel.school.contact.staffRoomNumber)}"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/detail_text_10"
                            android:textColor="#DD000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_info10"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@{viewModel.school.website}"
                            android:textColor="#DD000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/homepage_btn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="50dp"
                        android:text="홈페이지 보기"
                        app:websiteLink="@{viewModel.school.website}" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="#479F74" />


                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </FrameLayout>

</layout>
